[package]
name = "agent-rusty"
version = "0.1.0"
edition = "2021"
description = "A TUI dashboard for managing multiple AI coding agents via tmux"
authors = ["Elle"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File traversal
walkdir = "2"
ignore = "0.4"

# Regex with lazy initialization
regex = "1"
once_cell = "1"

# Clipboard
arboard = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
